--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Ensure GIT installed
-  apt: name=git state=present
+  apt: name=git state=present update_cache=yes
 
 - name: Ensure APT over HTTPS supported
   apt: name=apt-transport-https state=present
