--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -5,9 +5,15 @@
 
 - name: Ensure nginx installed
   apt: update_cache=yes name=nginx state=present
+ 
+# Nginx config for graylog server
+#- name: Copy nginx config with logging capabilities to graylog server
+#  template: src=templates/nginx_amon.j2 dest=/etc/nginx/nginx.conf
 
+# Nginx config for amon-server
 - name: Copy nginx config with logging capabilities to graylog server
-  template: src=templates/nginx.j2 dest=/etc/nginx/nginx.conf
+  template: src=templates/nginx_amon.j2 dest=/etc/nginx/nginx.conf
+
 
 - name: Ensure nginx service running
   service: name=nginx state=restarted
